--- a/.github/workflows/deploy-qa.yaml
+++ b/.github/workflows/deploy-qa.yaml
@@ -14,6 +14,6 @@ jobs:
     - name: Upload files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: ${{ secrets.qa_ftp_url }}
-        username: ${{ secrets.qa_ftp_username }}
-        password: ${{ secrets.qa_ftp_password }}
+        server: ${{ secrets.QA_FTP_URL }}
+        username: ${{ secrets.QA_FTP_USERNAME }}
+        password: ${{ secrets.QA_FTP_PASSWORD }}
