--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -10,6 +10,7 @@ jobs:
     
     - name: Upload Files Over SFTP
       run: |
+        ssh-keyscan -H ${{secrets.QA_SERVER_SSH}} > ~/.ssh/known_hosts
         cd $GITHUB_WORKSPACE
         sftp ${{ secrets.QA_SFTP_USERNAME }}@${{ secrets.QA_SFTP_URL }}
         ${{ secrets.QA_SFTP_PASSWORD }}
