--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -2,19 +2,17 @@ name: Deploy to QA
 on: [workflow_dispatch]
 jobs:
   web-deploy:
-    name: Deploy
+    name: Deploy to QA over SFTP
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2.3.2
     
-    - name: Upload Files Over SFTP
-      run: |
-        mkdir -p ~/.ssh
-        touch ~/.ssh/known_hosts
-        ssh-keyscan -H ${{secrets.QA_SERVER_SSH}} > ~/.ssh/known_hosts
-        cd $GITHUB_WORKSPACE
-        sftp ${{ secrets.QA_SFTP_USERNAME }}@${{ secrets.QA_SFTP_URL }}
-        ${{ secrets.QA_SFTP_PASSWORD }}
-        put -r ./web-deploy/*
-        exit
+    - name: Deploy to QA Server
+      uses: easingthemes/ssh-deploy@v2.1.5
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.QA_SERVER_SSH_KEY }}
+        ARGS: "-rltgoDzvO"
+        SOURCE: "dist/"
+        REMOTE_HOST: ${{ secrets.QA_SFTP_URL }}
+        REMOTE_USER: ${{ secrets.QA_SFTP_USERNAME }}
