--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "personal-website",
   "version": "1.0.0",
   "description": "Source code for my personal website, side robotics projects, and other web-applications linked with my domain",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack",
+    "watch": "npx webpack --watch",
+    "start": "npx webpack serve"
   },
   "repository": {
     "type": "git",
@@ -31,8 +34,10 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.2.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
