--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "homepage": "https://github.com/NathanDuPont/personal-website#readme",
   "dependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/html-webpack-plugin": "^3.2.4",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "react-hot-loader": "^4.13.0"
+    "babel-preset-react": "^6.24.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.0",
@@ -42,6 +42,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
