--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Hot Application Files
+*.hot-update.js
+*.hot-update.json
+
 # Logs
 logs
 *.log
@@ -82,7 +86,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
