--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.0",
@@ -36,6 +38,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.0",
     "html-webpack-plugin": "^5.2.0",
@@ -43,6 +46,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "redux-devtools": "^3.7.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
