--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/NathanDuPont/personal-website#readme",
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@reduxjs/toolkit": "^1.5.0",
     "@types/html-webpack-plugin": "^3.2.4",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
